--- a/Game/src/main/resources/application.properties
+++ b/Game/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 enemy.char = X
-player.char = o wall.char = #
-goal. char = O empty.char=
-enemy.color = RED player. color = GREEN
-wall.color =MAGENTA goal.color =BLUE
+player.char = o
+wall.char = #
+goal.char = O
+empty.char =
+enemy.color = RED
+player.color = GREEN
+wall.color = MAGENTA
+goal.color = BLUE
 empty.color = YELLOW
